tests/baselines/reference/YieldExpression8_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression8_es6.ts(2,9): error TS9001: 'generators' are not currently supported.
tests/cases/conformance/es6/yieldExpressions/YieldExpression8_es6.ts(1,1): error TS2304: Cannot find name 'yield'.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression8_es6.ts (2 errors) ====
    yield(foo);
    ~~~~~
!!! error TS2304: Cannot find name 'yield'.
    function* foo() {
            ~
!!! error TS9001: 'generators' are not currently supported.
      yield(foo);
    }